// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/<Button /> color black 1`] = `
<DocumentFragment>
  <button
    class="button color-black"
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;

exports[`components/<Button /> color white 1`] = `
<DocumentFragment>
  <button
    class="button color-white"
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;
